[package]
name = "precompile"
version = "0.1.0"
edition = "2021"

[dependencies]
ic_bls12_381 = {version = "0.10.0", default-features = false, features = ["groups","pairings"]}
base64 = {version = "0.22.1"}
sha2 = {version = "0.9", default-features = false}
chacha20poly1305 = {version = "0.9.1", default-features = false, features = ["alloc"]}
hkdf = {version = "0.11", default-features = false}
hmac = {version = "0.11", default-features = false}
revm = { version = "=19.2.0", features = ["std", "serde-json", "optional_eip3607"]}
revm-precompile = { version = "19.0.0", default-features = false}
alloy="0.9.2"

